# matsya_temperature

./: README.md  app.py  pyproject.toml
matsya_temperature/: __init__.py  config.py  generate_sentence.py  get_temperature_and_month.py  matsya_class.py  specific_token_generator.py  text_process_funcs.py
test/: test_get_temperature_and_month.py
