[tool.poetry]
name = "matsya_temperature"
version = "0.1.0"
description = ""
authors = ["Syuko4omi <riorioblackcat@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "3.9.13"
pyowm = "^3.3.0"
mojimoji = "^0.0.13"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
